--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Page header-->
     <header>
         <nav>
-            <a href=""><span>web</span>studio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -17,24 +17,26 @@
             </ul>
         </nav>
             <address>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                </ul>
             </address>
     </header>
     <!--Page main-->
     <main>
         <!-- Hero section -->
         <section>
-            <h1>Effective Solutions for Your Business</h1>
+            <h2>Effective Solutions for Your Business</h2>
             <button type="button">Order Service</button>
         </section>
         <!-- About us -->
         <section>
             <ul>
-                <li><h3>Strategy</h3></li>
-                <li><h3>Punctuality</h3></li>
-                <li><h3>Diligence</h3></li>
-                <li><h3>Technologies</h3></li>
+                <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+                <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li><h3>Diligence</h3><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+                <li><h3>Technologies</h3><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </section>
         <!-- Our Team -->
@@ -66,7 +68,7 @@
     </main>
     <!--Page footer-->
     <footer>
-        <a href="./index.html"><span>web</span>studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
