--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <address>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                    <li><a href="tel:11000111-11-11">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
     </header>
@@ -27,11 +27,12 @@
     <main>
         <!-- Hero section -->
         <section>
-            <h2>Effective Solutions for Your Business</h2>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <!-- About us -->
         <section>
+            <h2></h2>
             <ul>
                 <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
@@ -44,22 +45,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./imagins/Our Team/Mark.png" alt="Mark Guerrero">
+                    <img src="./imagins/Our Team/Mark.jpg" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Tom.png" alt="Tom Ford">
+                    <img src="./imagins/Our Team/Tom.jpg" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Camila.png" alt="Camila Garcia">
+                    <img src="./imagins/Our Team/Camila.jpg" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Daniel.png" alt="Daniel Wilson">
+                    <img src="./imagins/Our Team/Daniel.jpg" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
