--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./imagins/Our Team/Mark.jpg" alt="Mark Guerrero">
+                    <img src="./imagins/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Tom.jpg" alt="Tom Ford">
+                    <img src="./imagins/Our Team/Tom.jpg" width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Camila.jpg" alt="Camila Garcia">
+                    <img src="./imagins/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Daniel.jpg" alt="Daniel Wilson">
+                    <img src="./imagins/Our Team/Daniel.jpg" width="264"  alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
