--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <!-- About us -->
         <section>
-            <h2>    </h2>
+            <h2>/</h2>
             <ul>
                 <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
@@ -45,22 +45,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./imagins/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
+                    <img src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Tom.jpg" width="264" alt="Tom Ford">
+                    <img src="./images/Our Team/Tom.jpg width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
+                    <img src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./imagins/Our Team/Daniel.jpg" width="264"  alt="Daniel Wilson">
+                    <img src="./images/Our Team/Daniel.jpg" width="264"  alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
