--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Our Team/Tom.jpg width="264" alt="Tom Ford">
+                    <img src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
