--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
+
 <body>
     <!--Page header-->
     <header>
@@ -16,12 +18,12 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <!--Page main-->
     <main>
@@ -34,10 +36,26 @@
         <section>
             <h2>1</h2>
             <ul>
-                <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li><h3>Diligence</h3><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li><h3>Technologies</h3><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
+                </li>
             </ul>
         </section>
         <!-- Our Team -->
@@ -60,9 +78,45 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Our Team/Daniel.jpg" width="264"  alt="Daniel Wilson">
+                    <img src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Portfolio -->
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/Portfolio/Banking.jpg" alt="Banking App">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/Portfolio/Payment.jpg" alt="Cashless Payment">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/Portfolio/Meditation.jpg" alt="Meditaion App">
+                    <h3>Meditaion App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/Portfolio/Tax.jpg" alt="Taxi Service">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/Portfolio/Screen.jpg" alt="Screen Illustrations">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/Portfolio/Course.jpg" alt="Online Courses">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
                 </li>
             </ul>
         </section>
@@ -73,4 +127,3 @@
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
-</html>
