--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css>
     <title>WebStudio</title>
 </head>
 
 <body>
     <!--Page header-->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="nav">
+            <a class="logo" href="./index.html">WebStudio</a>
+            <ul class="menu list">
+                <li class="menu-item"><a href="">Studio</a></li>
+                <li class="menu-item"><a href="">Portfolio</a></li>
+                <li class="menu-item"><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="adress-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="adress-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -30,7 +37,7 @@
         <!-- Hero section -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button class="button" type="button">Order Service</button>
         </section>
         <!-- About us -->
         <section>
@@ -63,22 +70,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
+                    <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
+                    <img class="team-img" src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
+                    <img class="team-img" src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
+                    <img class="team-img" src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -89,32 +96,32 @@
             <h2>Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/Portfolio/Banking.jpg" alt="Banking App">
+                    <img class="port-img" src="./images/Portfolio/Banking.jpg" alt="Banking App">
                     <h3>Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/Portfolio/Payment.jpg" alt="Cashless Payment">
+                    <img class="port-img" src="./images/Portfolio/Payment.jpg" alt="Cashless Payment">
                     <h3>Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Portfolio/Meditation.jpg" alt="Meditaion App">
+                    <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App">
                     <h3>Meditaion App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/Portfolio/Tax.jpg" alt="Taxi Service">
+                    <img class="port-img" src="./images/Portfolio/Tax.jpg" alt="Taxi Service">
                     <h3>Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Portfolio/Screen.jpg" alt="Screen Illustrations">
+                    <img class="port-img" src="./images/Portfolio/Screen.jpg" alt="Screen Illustrations">
                     <h3>Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
                 <li>
-                    <img src="./images/Portfolio/Course.jpg" alt="Online Courses">
+                    <img class="port-img" src="./images/Portfolio/Course.jpg" alt="Online Courses">
                     <h3>Online Courses</h3>
                     <p>Marketing</p>
                 </li>
@@ -123,7 +130,7 @@
     </main>
     <!--Page footer-->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="footer-logo" href="./index.html">WebStudio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
