--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!--Page header-->
     <header class="header">
         <nav class="nav">
-            <a class="logo" href="./index.html">WebStudio</a>
+            <a class="logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
             <ul class="menu list">
-                <li class="menu-item"><a href="">Studio</a></li>
-                <li class="menu-item"><a href="">Portfolio</a></li>
-                <li class="menu-item"><a href="">Contacts</a></li>
+                <li class="menu-item"><a href="./index.html">Studio</a></li>
+                <li class="menu-item"><a href="./index.html">Portfolio</a></li>
+                <li class="menu-item"><a href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
