--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="menu-item"><a href="./index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="adress">
             <ul>
                 <li class="adress-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="adress-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
