--- a/index.html
+++ b/index.html
@@ -69,68 +69,68 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li>
+                <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <!-- Portfolio -->
         <section>
-            <h2>Our Portfolio</h2>
+            <h2 class="port-main-text">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Banking.jpg" alt="Banking App">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <img class="port-img" src="./images/Portfolio/Banking.jpg" alt="Banking App" width="360">
+                    <h3 class="port-list-main-text">Banking App</h3>
+                    <p class="port-list-text">App</p>
                 </li>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Payment.jpg" alt="Cashless Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <img class="port-img" src="./images/Portfolio/Payment.jpg" alt="Cashless Payment" width="360">
+                    <h3 class="port-list-main-text">Cashless Payment</h3>
+                    <p class="port-list-text">Marketing</p>
                 </li>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App">
-                    <h3>Meditaion App</h3>
-                    <p>App</p>
+                    <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App" width="360">
+                    <h3 class="port-list-main-text">Meditaion App</h3>
+                    <p class="port-list-text">App</p>
                 </li>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Tax.jpg" alt="Taxi Service">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <img class="port-img" src="./images/Portfolio/Tax.jpg" alt="Taxi Service" width="360">
+                    <h3 class="port-list-main-text">Taxi Service</h3>
+                    <p class="port-list-text">Marketing</p>
                 </li>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Screen.jpg" alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <img class="port-img" src="./images/Portfolio/Screen.jpg" alt="Screen Illustrations" width="360">
+                    <h3 class="port-list-main-text">Screen Illustrations</h3>
+                    <p class="port-list-text">Design</p>
                 </li>
                 <li>
-                    <img class="port-img" src="./images/Portfolio/Course.jpg" alt="Online Courses">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <img class="port-img" src="./images/Portfolio/Course.jpg" alt="Online Courses" width="360">
+                    <h3 class="port-list-main-text">Online Courses</h3>
+                    <p class="port-list-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
     <!--Page footer-->
-    <footer>
-        <a class="footer-logo" href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
