--- a/index.html
+++ b/index.html
@@ -20,54 +20,54 @@
         <nav class="nav">
             <a class="logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
             <ul class="menu list">
-                <li class="menu-item"><a href="./index.html">Studio</a></li>
-                <li class="menu-item"><a href="./index.html">Portfolio</a></li>
-                <li class="menu-item"><a href="./index.html">Contacts</a></li>
+                <li class="menu-item"><a class="nav-link" href="./index.html">Contacts</a></li>
+                <li class="menu-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                <li class="menu-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
             </ul>
         </nav>
         <address class="adress">
             <ul>
-                <li class="adress-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="adress-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="adress-item"><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="adress-item"><a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <!--Page main-->
     <main>
         <!-- Hero section -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
+        <section class="hero-section">
+            <h1 class="hero-main-text">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
         </section>
         <!-- About us -->
         <section>
             <h2>1</h2>
             <ul>
-                <li>
+                <li class="about-item">
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li>
+                <li class="about-item">
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="about-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li>
+                <li class="about-item">
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="about-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
+                <li class="about-item">
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!-- Our Team -->
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="team-main-text">Our Team</h2>
             <ul>
                 <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                     <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App" width="360">
-                    <h3 class="port-list-main-text">Meditaion App</h3>
+                    <h3 class="port-list-main-text">Meditation App</h3>
                     <p class="port-list-text">App</p>
                 </li>
                 <li>
@@ -130,7 +130,7 @@
     </main>
     <!--Page footer-->
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="half-footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
