--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
             <h2>1</h2>
             <ul>
                 <li class="about-item">
-                    <h3>Strategy</h3>
+                    <h3 class="about-list-main-text">Strategy</h3>
                     <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li class="about-item">
-                    <h3>Punctuality</h3>
+                    <h3 class="about-list-main-text">Punctuality</h3>
                     <p class="about-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li class="about-item">
-                    <h3>Diligence</h3>
+                    <h3 class="about-list-main-text">Diligence</h3>
                     <p class="about-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li class="about-item">
-                    <h3>Technologies</h3>
+                    <h3 class="about-list-main-text">Technologies</h3>
                     <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
@@ -71,22 +71,22 @@
             <ul>
                 <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="team-list-main-text">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
                 <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
-                    <h3>Tom Ford</h3>
+                    <h3 class="team-list-main-text">Tom Ford</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="team-list-main-text">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
                 </li>
                 <li class="team-list-item">
                     <img class="team-img" src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="team-list-main-text">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
                 </li>
             </ul>
