--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css>
     <title>WebStudio</title>
@@ -24,7 +27,8 @@
         </nav>
         <address class="adress">
             <ul>
-                <li class="adress-item"><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="adress-item"><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
                 <li class="adress-item"><a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
@@ -42,22 +46,26 @@
             <ul>
                 <li class="about-item">
                     <h3 class="about-list-main-text">Strategy</h3>
-                    <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and
+                        creative solution.
                     </p>
                 </li>
                 <li class="about-item">
                     <h3 class="about-list-main-text">Punctuality</h3>
-                    <p class="about-text">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="about-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li class="about-item">
                     <h3 class="about-list-main-text">Diligence</h3>
-                    <p class="about-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="about-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
                 <li class="about-item">
                     <h3 class="about-list-main-text">Technologies</h3>
-                    <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion
+                        for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -128,6 +136,7 @@
     <!--Page footer-->
     <footer class="footer">
         <a class="footer-logo" href="./index.html">Web<span class="half-footer-logo">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
