--- a/index.html
+++ b/index.html
@@ -18,31 +18,36 @@
 <body>
     <!--Page header-->
     <header class="header">
-        <nav class="nav">
-            <a class="logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
-            <ul class="menu list">
-                <li class="menu-item"><a class="nav-link" href="./index.html">Contacts</a></li>
-                <li class="menu-item"><a class="nav-link" href="./index.html">Studio</a></li>
-                <li class="menu-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
-            </ul>
-        </nav>
-        <address class="adress">
-            <ul>
-                <li class="adress-item"><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <div class="container header-container">
+            <nav class="nav">
+                <a class="logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
+                <ul class="menu list">
+                    <li class="menu-item"><a class="nav-link" href="./index.html">Contacts</a></li>
+                    <li class="menu-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
+                </ul>
+            </nav>
+            <address class="adress">
+                <ul class="adress-list">
+                    <li class="adress-item"><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="adress-item"><a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+                </ul>
+            </address>
+        </div>
     </header>
     <!--Page main-->
     <main>
         <!-- Hero section -->
         <section class="hero-section">
-            <h1 class="hero-main-text">Effective Solutions for Your Business</h1>
-            <button class="button" type="button">Order Service</button>
-        </section>
+            <div class="container hero-container">
+                <h1 class="hero-main-text">Effective Solutions for Your Business</h1>
+                <button class="button" type="button">Order Service</button>
+            </div>
+            </section>
         <!-- About us -->
         <section>
+            <div class="container"></div>
             <h2>1</h2>
             <ul>
                 <li class="about-item">
@@ -73,6 +78,7 @@
         </section>
         <!-- Our Team -->
         <section class="team">
+            <div class="container "></div>
             <h2 class="team-main-text">Our Team</h2>
             <ul>
                 <li class="team-list-item">
@@ -136,8 +142,10 @@
     </main>
     <!--Page footer-->
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">Web<span class="half-footer-logo">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+        <div class="container footer-container">
+            <a class="footer-logo" href="./index.html">Web<span class="half-footer-logo">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+            </div>
     </footer>
 </body>
