--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container header-container">
             <nav class="nav">
                 <a class="logo" href="./index.html">Web<span class="half-logo">Studio</span></a>
-                <ul class="menu list">
+                <ul class="menu-list">
                     <li class="menu-item"><a class="nav-link" href="./index.html">Contacts</a></li>
                     <li class="menu-item"><a class="nav-link" href="./index.html">Studio</a></li>
                     <li class="menu-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
